# SiliconOCR

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  main.py  mypy.ini  pyproject.toml  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
scripts/: add_translations.py  batch_process.py  export_results.py  merge_groups.py  search_documents.py  translate_documents.py
src/: __init__.py  api.py  classification.py  config.py  models.py  pdf_utils.py  processor.py  storage.py  text_utils.py  translation_utils.py  upload_utils.py
src/services/: __init__.py  device.py  embeddings.py  ocr.py  translation.py
tests/: conftest.py  test_api.py  test_processor.py
